--- a/application/views/scripts/formation/listeformationdispo.phtml
+++ b/application/views/scripts/formation/listeformationdispo.phtml
@@ -1,5 +1,6 @@
+<?php echo $this->placeholder('menu-connecte'); ?>
 <h1>Formations disponibles</h1>
-			<br /><br />
+			
 <h5 class="h5_modifie">Veuillez choisir une formations dans la liste ci-dessous pour passer une commande.</h5>
 <?php
 	echo $this->liste;
