ajout fonctionnalité admin : creer des formations

--- a/application/views/scripts/utilisateurs/menu-connecte.phtml
+++ b/application/views/scripts/utilisateurs/menu-connecte.phtml
@@ -25,6 +25,7 @@ if($user->id_groupe == 1){
 	        <ul>
 				<li><a href="/liste-des-groupes">Liste des groupes</a></li>
 	            <li><a href="/liste-des-formations">Liste des formations</a></li>
+	            <li><a href="/formation/gererformation">Administrer les formations</a></li>
 	            <li><a href="/liste-logins-interdits">Liste des logins interdits</a></li>
 	            <li><a href="/gerer-faq">Gérer la FAQ</a></li>
 	        </ul>
