--- a/application/views/scripts/utilisateurs/menu-connecte.phtml
+++ b/application/views/scripts/utilisateurs/menu-connecte.phtml
@@ -28,6 +28,7 @@ if($user->id_groupe == 1){
 	            <li><a href="/formation/gererformation">Administrer les formations</a></li>
 	            <li><a href="/liste-logins-interdits">Liste des logins interdits</a></li>
 	            <li><a href="/gerer-faq">Gérer la FAQ</a></li>
+	            <li><a href="/mail">Gestion des mails</a></li>
 	        </ul>
 	    </li>
 	    <li><a id="deconnexion_menu">Déconnexion</a></li>
