correction bug envoie mail inscription

--- a/application/views/scripts/inscription/inscriptionclient.phtml
+++ b/application/views/scripts/inscription/inscriptionclient.phtml
@@ -4,7 +4,7 @@ $user = new Zend_Session_Namespace('user');?>
 <h1>Formulaire d'inscription</h1>
 <div class="form-center">
 	<p id="info_inscription"><i>Tous les champs marqués d'une * sont obligatoires.</i></p>
-	<form id="inscription_form" enctype="application/x-www-form-urlencoded" method="post" action="/inscription/inscriptionclient">
+	<form id="inscription_form" enctype="application/x-www-form-urlencoded" method="post" action="/inscription">
 	<dl class="zend_form">
 		<div id="form-content">
 			<div id="inscription_civilite">
