modification formateur a valider

--- a/application/views/scripts/questions/reponsetestmotivation.phtml
+++ b/application/views/scripts/questions/reponsetestmotivation.phtml
@@ -1,3 +1,4 @@
+<?php echo $this->placeholder('menu-connecte') ?>
 <h1>Réponses au test de motivation</h1>
 <h5 class="h5_modifie"><?php echo $this->utilisateur ?></h5>
 <?php
