--- a/application/views/scripts/utilisateurs/formateuravalider.phtml
+++ b/application/views/scripts/utilisateurs/formateuravalider.phtml
@@ -163,7 +163,7 @@
                 return;	
              }
              			
-			location.href="/réponses-test-formateur?id="+id;
+			location.href="/reponses-test-formateur?id="+id;
         }
         
         function entretien_formateur(command, grid){
