ajout page de résultat commande formation, plus modification fonctionnement

--- a/application/views/scripts/formation/enregistrercommande.phtml
+++ b/application/views/scripts/formation/enregistrercommande.phtml
@@ -1,4 +1,7 @@
-<div id="content">
-<?php
+<?php 
+	if($this->success === true){
+		echo "Votre commande a été enregistrée, un email de confirmation vous a été envoyé";
+	}else{
+		echo "fail";
+	}
 ?>
-</div>
