suppresions de l'animation loading

--- a/application/views/scripts/utilisateurs/parcoursformateur.phtml
+++ b/application/views/scripts/utilisateurs/parcoursformateur.phtml
@@ -682,7 +682,7 @@ L'équipe Easylia vous contactera très rapidement par mail pour vous indiquer l
                 $("#error_"+type).fadeOut("slow");
             }, 2000 );
 		
-			$('#loading').html('');
+			$('#loading').html(" ");
 		}
 	}
 	
