--- a/public/css/style.css
+++ b/public/css/style.css
@@ -483,8 +483,8 @@ ul.spip {
 #phone {
 	text-align: right;
 	width: 29em;
-	margin-top: 1em;
-	float: left;
+	margin-top: 2em;
+	float: left
 }
 
 #phone h2 {
