correction faute d'orthographe

--- a/application/views/scripts/inscription/confirmation.phtml
+++ b/application/views/scripts/inscription/confirmation.phtml
@@ -3,9 +3,9 @@
 	Votre demande d'inscription a correctement été prise en compte. 
 	<br />
 	<br />
-	Un e-mail de confirmation viens de vous être envoyé à l'adresse <b><?php echo $this->email?></b>.<br />
+	Un e-mail de confirmation vient de vous être envoyé à l'adresse <b><?php echo $this->email?></b>.<br />
 	Cet e-mail comporte un lien sur lequel vous devez cliquer afin de valider votre inscription. <br /><br />
-	Si vous n'avez pas reçu l'e-mail de confirmation, veuillez vérifier votre dossier "courrier indésirable",<br /> ou bien demander le renvoie de cet e-mail en cliquant <a id="renvoie_mail" href="#">ici</a>
+	Si vous n'avez pas reçu l'e-mail de confirmation, veuillez vérifier votre dossier "courrier indésirable",<br /> ou bien demander le renvoi de cet e-mail en cliquant <a id="renvoie_mail" href="#">ici</a>.
 </p>
 <span id="info_envoie" style="color : green; display : none"></span>
 <input type="hidden" id="id_utilisateur" value="<?php echo $this->id_utilisateur?>" />
